Fix position of sidebar trigger
The sidebar wrapper is now a flex container, which causes the trigger
and the sidebar to appear in columns, and thus ensures that the trigger
will be always shown next to the sidebar, no matter if it is shown or
hidden.

As the trigger is shown in its own column that column takes space and
pushes the app content to the left. To prevent this the trigger width is
removed from the sidebar wrapper by pushing its left margin, which
causes the app content to be next to the sidebar and the trigger to
appear in front of it (although the padding used in the chat view
prevents them from overlapping, just like before).

--- a/css/style.scss
+++ b/css/style.scss
@@ -753,10 +753,16 @@ video {
 	display: inline-block;
 }
 
+/* The sidebar wrapper contains the trigger for the sidebar and the sidebar
+ * itself placed in columns. To prevent the trigger from taking up space for the
+ * app content the trigger width is removed from the wrapper by pushing its left
+ * margin. */
+#app-sidebar-wrapper {
+	display: flex;
+	margin-left: -44px;
+}
+
 #app-sidebar-trigger {
-	position: absolute;
-	top: 0;
-	right: 0;
 	/* Higher than the z-index of the app-content */
 	z-index: 1050;
 	cursor: pointer;
